--- a/.ci/Layers/Default_GCC/CubeMX/STM32CubeMX/STM32CubeMX.ioc
+++ b/.ci/Layers/Default_GCC/CubeMX/STM32CubeMX/STM32CubeMX.ioc
@@ -28,6 +28,45 @@ CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT2
+Dma.Request0=SPI5_RX
+Dma.Request1=SPI5_TX
+Dma.RequestsNb=2
+Dma.SPI5_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI5_RX.0.EventEnable=DISABLE
+Dma.SPI5_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_RX.0.Instance=DMA1_Stream0
+Dma.SPI5_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_RX.0.Mode=DMA_NORMAL
+Dma.SPI5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI5_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_RX.0.RequestNumber=1
+Dma.SPI5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI5_RX.0.SignalID=NONE
+Dma.SPI5_RX.0.SyncEnable=DISABLE
+Dma.SPI5_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI5_RX.0.SyncRequestNumber=1
+Dma.SPI5_RX.0.SyncSignalID=NONE
+Dma.SPI5_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI5_TX.1.EventEnable=DISABLE
+Dma.SPI5_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_TX.1.Instance=DMA1_Stream1
+Dma.SPI5_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_TX.1.Mode=DMA_NORMAL
+Dma.SPI5_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI5_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_TX.1.RequestNumber=1
+Dma.SPI5_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI5_TX.1.SignalID=NONE
+Dma.SPI5_TX.1.SyncEnable=DISABLE
+Dma.SPI5_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI5_TX.1.SyncRequestNumber=1
+Dma.SPI5_TX.1.SyncSignalID=NONE
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 FDCAN1.CalculateBaudRateNominal=1718750
@@ -49,30 +88,31 @@ Mcu.CPN=STM32H735IGK6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=LTDC
-Mcu.IP11=MEMORYMAP
-Mcu.IP12=NVIC
-Mcu.IP13=OCTOSPI1
-Mcu.IP14=OCTOSPI2
-Mcu.IP15=RCC
-Mcu.IP16=SDMMC1
-Mcu.IP17=SPI5
-Mcu.IP18=SYS
-Mcu.IP19=TIM1
+Mcu.IP10=I2C4
+Mcu.IP11=LTDC
+Mcu.IP12=MEMORYMAP
+Mcu.IP13=NVIC
+Mcu.IP14=OCTOSPI1
+Mcu.IP15=OCTOSPI2
+Mcu.IP16=RCC
+Mcu.IP17=SDMMC1
+Mcu.IP18=SPI5
+Mcu.IP19=SYS
 Mcu.IP2=ADC3
-Mcu.IP20=TIM4
-Mcu.IP21=TIM5
-Mcu.IP22=USART1
-Mcu.IP23=USART3
-Mcu.IP24=USB_OTG_HS
+Mcu.IP20=TIM1
+Mcu.IP21=TIM4
+Mcu.IP22=TIM5
+Mcu.IP23=USART1
+Mcu.IP24=USART3
+Mcu.IP25=USB_OTG_HS
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DAC1
 Mcu.IP5=DEBUG
-Mcu.IP6=ETH
-Mcu.IP7=FDCAN1
-Mcu.IP8=FDCAN2
-Mcu.IP9=I2C4
-Mcu.IPNb=25
+Mcu.IP6=DMA
+Mcu.IP7=ETH
+Mcu.IP8=FDCAN1
+Mcu.IP9=FDCAN2
+Mcu.IPNb=26
 Mcu.Name=STM32H735IGKx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PB8
@@ -216,6 +256,8 @@ Mcu.UserName=STM32H735IGKx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ETH_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -920,7 +962,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_DAC1_Init-DAC1-false-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-MX_FDCAN1_Init-FDCAN1-false-HAL-true,9-MX_FDCAN2_Init-FDCAN2-false-HAL-true,10-MX_I2C4_Init-I2C4-false-HAL-true,11-MX_LTDC_Init-LTDC-false-HAL-true,12-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,13-MX_OCTOSPI2_Init-OCTOSPI2-false-HAL-true,14-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,15-MX_TIM1_Init-TIM1-false-HAL-true,16-MX_TIM4_Init-TIM4-false-HAL-true,17-MX_TIM5_Init-TIM5-false-HAL-true,18-MX_USART1_UART_Init-USART1-false-HAL-true,19-MX_USART3_UART_Init-USART3-false-HAL-true,20-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,21-MX_SPI5_Init-SPI5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_FDCAN1_Init-FDCAN1-false-HAL-true,10-MX_FDCAN2_Init-FDCAN2-false-HAL-true,11-MX_I2C4_Init-I2C4-false-HAL-true,12-MX_LTDC_Init-LTDC-false-HAL-true,13-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,14-MX_OCTOSPI2_Init-OCTOSPI2-false-HAL-true,15-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,16-MX_TIM1_Init-TIM1-false-HAL-true,17-MX_TIM4_Init-TIM4-false-HAL-true,18-MX_TIM5_Init-TIM5-false-HAL-true,19-MX_USART1_UART_Init-USART1-false-HAL-true,20-MX_USART3_UART_Init-USART3-false-HAL-true,21-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,22-MX_SPI5_Init-SPI5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=80000000
 RCC.AHB12Freq_Value=275000000
 RCC.AHB4Freq_Value=275000000
