--- a/Layers/Default/CubeMX/STM32CubeMX/STM32CubeMX.ioc
+++ b/Layers/Default/CubeMX/STM32CubeMX/STM32CubeMX.ioc
@@ -256,8 +256,8 @@ Mcu.UserName=STM32H735IGKx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:8\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:8\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ETH_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
