Update layers (enable I2C4 interrupts)

--- a/.ci/Layers/Default_GCC/CubeMX/STM32CubeMX/STM32CubeMX.ioc
+++ b/.ci/Layers/Default_GCC/CubeMX/STM32CubeMX/STM32CubeMX.ioc
@@ -220,6 +220,8 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ETH_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C4_ER_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C4_EV_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.OTG_HS_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
