--- a/Layers/Default/CubeMX/STM32CubeMX/STM32CubeMX.ioc
+++ b/Layers/Default/CubeMX/STM32CubeMX/STM32CubeMX.ioc
@@ -41,7 +41,7 @@ Dma.SPI5_RX.0.Mode=DMA_NORMAL
 Dma.SPI5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI5_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI5_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI5_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI5_RX.0.RequestNumber=1
 Dma.SPI5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.SPI5_RX.0.SignalID=NONE
@@ -59,7 +59,7 @@ Dma.SPI5_TX.1.Mode=DMA_NORMAL
 Dma.SPI5_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI5_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI5_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI5_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.SPI5_TX.1.RequestNumber=1
 Dma.SPI5_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.SPI5_TX.1.SignalID=NONE
@@ -262,6 +262,8 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ETH_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C4_ER_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C4_EV_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.OTG_HS_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
