--- a/Layers/Default/CubeMX/STM32CubeMX/STM32CubeMX.ioc
+++ b/Layers/Default/CubeMX/STM32CubeMX/STM32CubeMX.ioc
@@ -28,6 +28,45 @@ CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT2
+Dma.Request0=SPI5_RX
+Dma.Request1=SPI5_TX
+Dma.RequestsNb=2
+Dma.SPI5_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI5_RX.0.EventEnable=DISABLE
+Dma.SPI5_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_RX.0.Instance=DMA1_Stream0
+Dma.SPI5_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_RX.0.Mode=DMA_NORMAL
+Dma.SPI5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI5_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI5_RX.0.RequestNumber=1
+Dma.SPI5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI5_RX.0.SignalID=NONE
+Dma.SPI5_RX.0.SyncEnable=DISABLE
+Dma.SPI5_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI5_RX.0.SyncRequestNumber=1
+Dma.SPI5_RX.0.SyncSignalID=NONE
+Dma.SPI5_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI5_TX.1.EventEnable=DISABLE
+Dma.SPI5_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_TX.1.Instance=DMA1_Stream1
+Dma.SPI5_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_TX.1.Mode=DMA_NORMAL
+Dma.SPI5_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI5_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI5_TX.1.RequestNumber=1
+Dma.SPI5_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI5_TX.1.SignalID=NONE
+Dma.SPI5_TX.1.SyncEnable=DISABLE
+Dma.SPI5_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI5_TX.1.SyncRequestNumber=1
+Dma.SPI5_TX.1.SyncSignalID=NONE
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 FDCAN1.CalculateBaudRateNominal=1718750
@@ -49,30 +88,29 @@ Mcu.CPN=STM32H735IGK6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=LTDC
-Mcu.IP11=MEMORYMAP
-Mcu.IP12=NVIC
-Mcu.IP13=OCTOSPI1
-Mcu.IP14=OCTOSPI2
-Mcu.IP15=RCC
-Mcu.IP16=SDMMC1
-Mcu.IP17=SPI5
-Mcu.IP18=SYS
-Mcu.IP19=TIM1
+Mcu.IP10=I2C4
+Mcu.IP11=LTDC
+Mcu.IP12=MEMORYMAP
+Mcu.IP13=NVIC
+Mcu.IP14=OCTOSPI1
+Mcu.IP15=OCTOSPI2
+Mcu.IP16=RCC
+Mcu.IP17=SDMMC1
+Mcu.IP18=SPI5
+Mcu.IP19=SYS
 Mcu.IP2=ADC3
 Mcu.IP20=TIM4
-Mcu.IP21=TIM5
-Mcu.IP22=USART1
-Mcu.IP23=USART3
-Mcu.IP24=USB_OTG_HS
+Mcu.IP21=USART1
+Mcu.IP22=USART3
+Mcu.IP23=USB_OTG_HS
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DAC1
 Mcu.IP5=DEBUG
-Mcu.IP6=ETH
-Mcu.IP7=FDCAN1
-Mcu.IP8=FDCAN2
-Mcu.IP9=I2C4
-Mcu.IPNb=25
+Mcu.IP6=DMA
+Mcu.IP7=ETH
+Mcu.IP8=FDCAN1
+Mcu.IP9=FDCAN2
+Mcu.IPNb=24
 Mcu.Name=STM32H735IGKx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PB8
@@ -216,8 +254,15 @@ Mcu.UserName=STM32H735IGKx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:8\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:8\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ETH_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI0_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C4_ER_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
@@ -238,9 +283,9 @@ NVIC.USART1_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=ARD_D3
+PA0.GPIO_Label=ARDUINO_D3
 PA0.Locked=true
-PA0.Signal=S_TIM5_CH1
+PA0.Signal=GPXTI0
 PA0_C.GPIOParameters=GPIO_Label
 PA0_C.GPIO_Label=ARD_A2
 PA0_C.Locked=true
@@ -401,9 +446,9 @@ PB6.Locked=true
 PB6.Mode=FDCAN_Activate
 PB6.Signal=FDCAN2_TX
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=ARD_D9
+PB7.GPIO_Label=ARDUINO_D9
 PB7.Locked=true
-PB7.Signal=S_TIM4_CH2
+PB7.Signal=GPXTI7
 PB8.GPIOParameters=GPIO_Speed,GPIO_Label
 PB8.GPIO_Label=LCD_B6
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -542,9 +587,9 @@ PD14.GPIO_Label=STMOD\#14-PWM
 PD14.Locked=true
 PD14.Signal=S_TIM4_CH3
 PD15.GPIOParameters=GPIO_Label
-PD15.GPIO_Label=ARD_D6
+PD15.GPIO_Label=ARDUINO_D6
 PD15.Locked=true
-PD15.Signal=S_TIM4_CH4
+PD15.Signal=GPXTI15
 PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=SDIO1_CMD
 PD2.GPIO_PuPd=GPIO_PULLUP
@@ -625,9 +670,9 @@ PE13.Locked=true
 PE13.Mode=RGB888
 PE13.Signal=LTDC_DE
 PE14.GPIOParameters=GPIO_Label
-PE14.GPIO_Label=ARD_D5
+PE14.GPIO_Label=ARDUINO_D5
 PE14.Locked=true
-PE14.Signal=S_TIM1_CH4
+PE14.Signal=GPXTI14
 PE15.GPIOParameters=GPIO_Speed,GPIO_Label
 PE15.GPIO_Label=LCD_R7
 PE15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -640,7 +685,7 @@ PE2.Locked=true
 PE2.Mode=OCTOSPI1_IOL_Port1L
 PE2.Signal=OCTOSPIM_P1_IO2
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=ARD_D8
+PE3.GPIO_Label=ARDUINO_D8
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_Label
@@ -723,8 +768,10 @@ PF5.GPIO_Label=MemoryCard_1_CD
 PF5.GPIO_PuPd=GPIO_PULLUP
 PF5.Locked=true
 PF5.Signal=GPIO_Input
+PF6.GPIOParameters=GPIO_Label
+PF6.GPIO_Label=ARDUINO_D10
 PF6.Locked=true
-PF6.Signal=GPIO_Input
+PF6.Signal=GPXTI6
 PF7.GPIOParameters=GPIO_Speed
 PF7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PF7.Locked=true
@@ -785,17 +832,17 @@ PG2.GPIO_Label=CTP_INT
 PG2.Locked=true
 PG2.Signal=GPXTI2
 PG3.GPIOParameters=GPIO_Label
-PG3.GPIO_Label=ARD_D2
+PG3.GPIO_Label=ARDUINO_D2
 PG3.Locked=true
 PG3.Signal=GPXTI3
 PG4.GPIOParameters=GPIO_Label
-PG4.GPIO_Label=ARD_D4
+PG4.GPIO_Label=ARDUINO_D4
 PG4.Locked=true
-PG4.Signal=GPIO_Output
+PG4.Signal=GPXTI4
 PG5.GPIOParameters=GPIO_Label
-PG5.GPIO_Label=ARD_D7
+PG5.GPIO_Label=ARDUINO_D7
 PG5.Locked=true
-PG5.Signal=GPIO_Output
+PG5.Signal=GPXTI5
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=OCSPI1_NCS
 PG6.Locked=true
@@ -904,7 +951,7 @@ ProjectManager.DeviceId=STM32H735IGKx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.11.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x400
+ProjectManager.HeapSize=0x10000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -922,7 +969,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_DAC1_Init-DAC1-false-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-MX_FDCAN1_Init-FDCAN1-false-HAL-true,9-MX_FDCAN2_Init-FDCAN2-false-HAL-true,10-MX_I2C4_Init-I2C4-false-HAL-true,11-MX_LTDC_Init-LTDC-false-HAL-true,12-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,13-MX_OCTOSPI2_Init-OCTOSPI2-false-HAL-true,14-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,15-MX_TIM1_Init-TIM1-false-HAL-true,16-MX_TIM4_Init-TIM4-false-HAL-true,17-MX_TIM5_Init-TIM5-false-HAL-true,18-MX_USART1_UART_Init-USART1-false-HAL-true,19-MX_USART3_UART_Init-USART3-false-HAL-true,20-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,21-MX_SPI5_Init-SPI5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_FDCAN1_Init-FDCAN1-false-HAL-true,10-MX_FDCAN2_Init-FDCAN2-false-HAL-true,11-MX_I2C4_Init-I2C4-false-HAL-true,12-MX_LTDC_Init-LTDC-false-HAL-true,13-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,14-MX_OCTOSPI2_Init-OCTOSPI2-false-HAL-true,15-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,16-MX_TIM4_Init-TIM4-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART3_UART_Init-USART3-false-HAL-true,19-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,20-MX_SPI5_Init-SPI5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=80000000
 RCC.AHB12Freq_Value=275000000
 RCC.AHB4Freq_Value=275000000
@@ -1015,26 +1062,32 @@ SH.ADCx_INP10.0=ADC1_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=1
 SH.COMP_DAC12_group.0=DAC1_OUT2,DAC_OUT2
 SH.COMP_DAC12_group.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
-SH.S_TIM1_CH4.ConfNb=1
-SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
-SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
-SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
-SH.S_TIM4_CH4.ConfNb=1
-SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
-SH.S_TIM5_CH1.ConfNb=1
 SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI5.CalculateBaudRate=17.1875 MBits/s
 SPI5.DataSize=SPI_DATASIZE_8BIT
@@ -1042,14 +1095,8 @@ SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI5.Mode=SPI_MODE_MASTER
 SPI5.VirtualType=VM_MASTER
-TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.IPParameters=Channel-PWM Generation4 CH4
-TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM4.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3
-TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM5.IPParameters=Channel-PWM Generation1 CH1
+TIM4.IPParameters=Channel-PWM Generation3 CH3
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
